--- a/ClientSide/UI/index.html
+++ b/ClientSide/UI/index.html
@@ -100,8 +100,9 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="sr-only" for="form-password">Password</label>
-                                    <input type="text" name="form-password" placeholder="Enter Github Repo Url"  class="form-password form-control"
-                                        id="form-password">
+                                    <input list="repo_list" type="text" name="form-password" placeholder="Enter Github Repo Url" class="form-password form-control" id="form-password">
+                                    <datalist id="repo_list"></datalist>
+                                    <a href="#" data-toggle="modal" data-target="#myModal">Find</a>
                                 </div>
                                 <button type="submit" class="btn" id="btn">Deploy!</button>
                                 <p class="message">Already Deployed? <a href="#">Check Status</a></p>
@@ -166,7 +167,8 @@
                                                 var message = "";
                                                 list.forEach(function (element) {
                                                     message += "<b>Repo Url</b> :" + element.url +
-                                                        "--> <b>Status</b> : " + element.status + "<br>";
+                                                        "--> <b>Status</b> : " + element.status +
+                                                        "<br>";
                                                 }, this);
                                                 document.getElementById("result").innerHTML = message;
                                                 document.getElementById("status").innerHTML = "Status: " +
@@ -186,6 +188,48 @@
             </div>
         </div>
     </section>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <input placeholder="Enter GitHub Username" type="text" class="form-control" id="git_user">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" onclick="findRepo()">Find Repositories</button>
+                </div>
+            </div>
+        </div>
+        <script>
+            function findRepo() {
+                var username = document.getElementById("git_user").value;
+                jQuery.ajax({
+                    type: "GET",
+                    url: "https://api.github.com/users/" + username + "/repos",
+                    dataType: "json",
+                    success: function (data, textStatus, jqXHR) {
+                        var list = [];
+                        data.forEach(function (element) {
+                            list.push(element.html_url);
+                        }, this);
+                        addRepos(list);
+                    }, //function(data, textStatus, jqXHR)
+                    error: function (jqXhr, textStatus, errorThrown) {
+                        console.log(errorThrown); //function(jqXHR, textStatus, errorThrown)
+                    }
+                });
+            }
+
+            function addRepos(list) {
+                var options = '';
+                for (var i = 0; i < list.length; i++) {
+                    options += '<option value="' + list[i] + '" />';
+                }
+                document.getElementById('repo_list').innerHTML = options;
+            }
+        </script>
+    </div>
     <div style="padding:5px;" id="message">
     </div>
 
