--- a/ClientSide/UI/index.html
+++ b/ClientSide/UI/index.html
@@ -100,9 +100,10 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="sr-only" for="form-password">Password</label>
-                                    <input list="repo_list" type="text" name="form-password" placeholder="Enter Github Repo Url" class="form-password form-control" id="form-password">
+                                    <input list="repo_list" type="text" name="form-password" placeholder="Enter Github Repo Url" class="form-password form-control"
+                                        id="form-password">
                                     <datalist id="repo_list"></datalist>
-                                    <a href="#" data-toggle="modal" data-target="#myModal">Find</a>
+                                    <a id="find" href="#" data-toggle="modal" data-target="#myModal">Find</a>
                                 </div>
                                 <button type="submit" class="btn" id="btn">Deploy!</button>
                                 <p class="message">Already Deployed? <a href="#">Check Status</a></p>
@@ -214,6 +215,20 @@
                             list.push(element.html_url);
                         }, this);
                         addRepos(list);
+                        if (jqXHR.status == 404) {
+                            $(document).ready(function () {
+                                jQuery('#message').html(
+                                    '<div class="alert alert-warning show" id="alert"><a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a><strong>Info!</strong>' +
+                                    data.message + '</div>'
+                                );
+                            });
+
+                            window.setTimeout(function () {
+                                $("#alert").fadeTo(500, 0).slideUp(500, function () {
+                                    $(this).remove();
+                                });
+                            }, 3000);
+                        }
                     }, //function(data, textStatus, jqXHR)
                     error: function (jqXhr, textStatus, errorThrown) {
                         console.log(errorThrown); //function(jqXHR, textStatus, errorThrown)
@@ -223,6 +238,9 @@
 
             function addRepos(list) {
                 var options = '';
+                if (list.length == 0) {
+                    document.getElementById('find').style.display = 'none';
+                }
                 for (var i = 0; i < list.length; i++) {
                     options += '<option value="' + list[i] + '" />';
                 }
