--- a/ClientSide/UI/index.html
+++ b/ClientSide/UI/index.html
@@ -215,11 +215,14 @@
                             list.push(element.html_url);
                         }, this);
                         addRepos(list);
-                        if (jqXHR.status == 404) {
+                    
+                    }, //function(data, textStatus, jqXHR)
+                    error: function (jqXhr, textStatus, errorThrown) {
                             $(document).ready(function () {
-                                jQuery('#message').html(
-                                    '<div class="alert alert-warning show" id="alert"><a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a><strong>Info!</strong>' +
-                                    data.message + '</div>'
+                                console.log("error");
+                                jQuery('#error').html(
+                                    '<div class="alert alert-danger show" id="alert"><a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a><strong>Info!</strong>' +
+                                     "Invalid username"+ '</div>'
                                 );
                             });
 
@@ -228,9 +231,6 @@
                                     $(this).remove();
                                 });
                             }, 3000);
-                        }
-                    }, //function(data, textStatus, jqXHR)
-                    error: function (jqXhr, textStatus, errorThrown) {
                         console.log(errorThrown); //function(jqXHR, textStatus, errorThrown)
                     }
                 });
@@ -238,7 +238,7 @@
 
             function addRepos(list) {
                 var options = '';
-                if (list.length == 0) {
+                if (list.length > 0) {
                     document.getElementById('find').style.display = 'none';
                 }
                 for (var i = 0; i < list.length; i++) {
@@ -249,6 +249,8 @@
         </script>
     </div>
     <div style="padding:5px;" id="message">
+    </div>
+    <div style="padding:5px;" id="error">
     </div>
 
     <!--[if lt IE 10]>
